[project]
name = "attack-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "psycopg-pool>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.10",
    "uvicorn>=0.37.0",
]
